# bricks-ai

./: .env.exemple  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
crates/bricks-ai-app/: Cargo.toml
crates/bricks-ai-app/src/: main.rs
crates/bricks-ai-core/: Cargo.toml
crates/bricks-ai-core/src/: lib.rs
crates/bricks-ai-runtime/: Cargo.toml
crates/bricks-ai-runtime/src/: lib.rs
crates/bricks-ai-ui/: Cargo.toml
crates/bricks-ai-ui/src/: lib.rs
docs/: architecture.md  concept.md  engraved_weights.md  memory.md  runtime.md  teacher_ai_validation.md  training_packs.md  ui_contract.md
examples/basic-grid-training/: README.md
examples/runtime/: engraved_model_sample.json
examples/universal-pack-training/: README.md
