[package]
name = "bricks-ai-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "bricks_ai_runtime"
path = "src/lib.rs"

[dependencies]
bricks-ai-core = { path = "../bricks-ai-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
